Complete authorization (almost)